test/sema/negative/trait_impls6.output
trait_impls6.impala:4 col 1 - 17: error: Duplicated implementation of trait 'T'
